fix node version

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "version": "0.0.1",
     "main": "babel.config.js",
     "engines": {
-        "node": "12.x || 14.x || 16.x",
+        "node": "12.x || 14.x",
         "yarn": "1.22.x"
     },
     "dependencies": {
