--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -39,4 +39,4 @@ jobs:
         run: |
           curl -Os https://uploader.codecov.io/latest/macos/codecov
           chmod +x codecov
-          ./codecov -t ${CODECOV_TOKEN}
+          ./codecov
