--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -38,4 +38,4 @@ jobs:
       - run: |
           curl -Os https://uploader.codecov.io/latest/macos/codecov
           chmod +x codecov
-          ./codecov -t ${CODECOV_TOKEN}
+          ./codecov -t ${secrets.CODECOV_TOKEN}
