--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -35,7 +35,5 @@ jobs:
       - run: bundle exec rake db:test:prepare
       - run: bundle exec rspec
       - run: bundle exec cucumber
-      - run: |
-          curl -Os https://uploader.codecov.io/latest/macos/codecov
-          chmod +x codecov
-          ./codecov -t ${secrets.CODECOV_TOKEN}
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
