--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -24,7 +24,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 12.13.1
-      - uses: codecov/codecov-action@v3
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
@@ -36,3 +35,7 @@ jobs:
       - run: bundle exec rake db:test:prepare
       - run: bundle exec rspec
       - run: bundle exec cucumber
+      - run: |
+          curl -Os https://uploader.codecov.io/latest/macos/codecov
+          chmod +x codecov
+          ./codecov -t ${CODECOV_TOKEN}
