--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -34,7 +34,7 @@ jobs:
       - run: bundle exec rake db:setup
       - run: bundle exec rake db:test:prepare
       - run: |
-          curl -Os https://uploader.codecov.io/latest/macos/codecov
+          curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
           ./codecov -t ${CODECOV_TOKEN}
       - run: bundle exec rspec
