--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -36,6 +36,6 @@ jobs:
       - run: |
           curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
-          ./codecov -t ${CODECOV_TOKEN}
+          ./codecov -f -t ${CODECOV_TOKEN}
       - run: bundle exec rspec
       - run: bundle exec cucumber
