--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -34,8 +34,8 @@ jobs:
       - run: bundle exec rake db:setup
       - run: bundle exec rake db:test:prepare
       - run: |
-          curl -Os https://uploader.codecov.io/latest/linux/codecov
+          curl -Os -f https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
-          ./codecov -f ${CODECOV_TOKEN}
+          ./codecov -t ${CODECOV_TOKEN}
       - run: bundle exec rspec
       - run: bundle exec cucumber
