--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -33,9 +33,11 @@ jobs:
       - run: yarn install
       - run: bundle exec rake db:setup
       - run: bundle exec rake db:test:prepare
+      - uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          files: ./coverage/index.html
+          fail_ci_if_error: false
+          verbose: true
       - run: bundle exec cucumber
       - run: bundle exec rspec
-      - run: |
-          curl -Os https://uploader.codecov.io/latest/linux/codecov
-          chmod +x codecov
-          ./codecov -t ${CODECOV_TOKEN}
