--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -35,7 +35,8 @@ jobs:
       - run: bundle exec rake db:test:prepare
       - uses: codecov/codecov-action@v3
         with:
-          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage
           fail_ci_if_error: false
           verbose: true
       - run: bundle exec cucumber
