--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage
+          files: ./coverage/.resultset.json
           fail_ci_if_error: false
           verbose: true
       - run: bundle exec cucumber
