--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ capybara-*.html
 /db/*.sqlite3-journal
 /db/*.sqlite3-[0-9]*
 /public/system
+/coverage/assets
+/coverage/index.html
+/coverage/resultset.json.lock
 /spec/tmp
 *.orig
 rerun.txt
