--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -33,5 +33,11 @@ jobs:
       - run: yarn install
       - run: bundle exec rake db:setup
       - run: bundle exec rake db:test:prepare
-      - run: bundle exec rspec
-      - run: bundle exec cucumber
+      - name: Run Rspec
+        run: bundle exec rspec
+        env:
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+      - name: Run Cucumber
+        run: bundle exec cucumber
+        env:
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
