try adding back codecov commands to workflow,
(with codecov removed from env.rb and rails_helper.rb)

--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -41,3 +41,9 @@ jobs:
         run: bundle exec cucumber
         env:
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+      - uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/.resultset.json
+          fail_ci_if_error: false
+          verbose: true
