--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -47,4 +47,4 @@ jobs:
           files: ./coverage/.resultset.json
           fail_ci_if_error: false
           verbose: true
-          ignore: "lib"
+          ignore: "./lib"
